<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />
        <variable
            name="item"
            type="com.nikopiko.githubkotlin.retrofit.models.Items" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.repodetail.RepoDetailFragment">

        <TextView
            android:id="@+id/repo_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/repository_name"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Repository Name" />

        <TextView
            android:id="@+id/repo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.repoName}"
            android:textSize="@dimen/_20sp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/repo_name_label"
            tools:text="Octocat"
            android:focusable="true" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@{item.description}"
            android:textSize="@dimen/_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/repo_owner_label"
            app:layout_constraintTop_toBottomOf="@+id/repo_name_label"
            tools:text="Description" />

        <TextView
            android:id="@+id/language_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/language"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="@+id/repo_name_label"
            app:layout_constraintTop_toBottomOf="@+id/forks_label"
            tools:text="Language" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{item.language}"
            android:textSize="@dimen/_20sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/language_label"
            tools:text="Rust" />

        <TextView
            android:id="@+id/forks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forks"
            app:layout_constraintEnd_toStartOf="@+id/forks_count"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:text="Forks" />

        <TextView
            android:id="@+id/forks_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(item.forksCount)}"
            app:layout_constraintEnd_toStartOf="@+id/stars_label"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/forks_label"
            app:layout_constraintTop_toTopOf="@+id/forks_label"
            tools:text="12345" />

        <TextView
            android:id="@+id/stars_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/stars"
            app:layout_constraintEnd_toStartOf="@+id/stars"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/forks_count"
            app:layout_constraintTop_toTopOf="@+id/forks_count"
            tools:text="Stars" />

        <TextView
            android:id="@+id/stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(item.stargazersCount)}"
            app:layout_constraintEnd_toStartOf="@+id/issues_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/stars_label"
            app:layout_constraintTop_toTopOf="@+id/stars_label"
            tools:text="23445" />

        <TextView
            android:id="@+id/issues_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/issues"
            app:layout_constraintEnd_toStartOf="@+id/issues"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/stars"
            app:layout_constraintTop_toTopOf="@+id/stars"
            tools:text="Issues" />

        <TextView
            android:id="@+id/issues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{String.valueOf(item.openIssuesCount)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/issues_label"
            app:layout_constraintTop_toTopOf="@+id/issues_label"
            tools:text="25" />

        <TextView
            android:id="@+id/created_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/_20sp"
            android:text="@string/created"
            app:layout_constraintStart_toStartOf="@+id/repo_name_label"
            app:layout_constraintTop_toBottomOf="@+id/language"
            tools:text="Created" />

        <TextView
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sp"
            android:updated="@{item.createdAt}"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/created_label"
            tools:text="January 1, 2015" />

        <TextView
            android:id="@+id/updated_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/_20sp"
            android:text="@string/updated"
            app:layout_constraintStart_toStartOf="@+id/repo_name_label"
            app:layout_constraintTop_toBottomOf="@+id/created_label"
            tools:text="Updated" />

        <TextView
            android:id="@+id/updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sp"
            android:updated="@{item.updatedAt}"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/updated_label"
            tools:text="January 1, 2015" />

        <TextView
            android:id="@+id/repo_owner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/_20sp"
            android:text="@string/owner"
            app:layout_constraintStart_toStartOf="@+id/repo_name_label"
            app:layout_constraintTop_toBottomOf="@+id/updated_label"
            tools:text="Repository Owner" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sp"
            android:text="@{item.owner.login}"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/repo_owner_label"
            tools:text="Johnny Cash"
            android:focusable="true" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="187dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>