<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="itemData"
            type="com.nikopiko.githubkotlin.retrofit.models.Items" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20dp">

        <LinearLayout
            android:id="@+id/item_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_avatar"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:src="@android:drawable/presence_busy"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:focusable="true" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_20dp"
                android:gravity="center_vertical"
                android:text="@{itemData.owner.login}"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                tools:text="Johnny Cash"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_20sp"
                android:focusable="true" />
            <TextView
                android:id="@+id/repo_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_20dp"
                android:gravity="center_vertical"
                android:text="@{itemData.repoName}"
                tools:text="Octocat"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/updated_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_below="@id/item_header_container"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_updated_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_update"
                />
            <TextView
                android:id="@+id/item_updated_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:updated="@{itemData.updatedAt}"
                tools:text="Jan.2015"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_fork_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/updated_container"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_fork_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forks"
                />

            <TextView
                android:id="@+id/item_fork_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                tools:text="123"
                android:text="@{String.valueOf(itemData.forksCount)}"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_star_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/updated_container"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_toEndOf="@id/item_fork_container"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_star_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stars"
                />

            <TextView
                android:id="@+id/item_star_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:text="@{String.valueOf(itemData.stargazersCount)}"
                tools:text="2345"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_issues_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/updated_container"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_toEndOf="@id/item_star_container"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_issues_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issues"
                />

            <TextView
                android:id="@+id/item_issue_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:text="@{String.valueOf(itemData.openIssuesCount)}"
                tools:text="21"
                android:textColor="@android:color/black" />
        </LinearLayout>


    </RelativeLayout>
</layout>